cmake_minimum_required(VERSION 3.3)
project(LeetCode)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    solutions/001-medium-two-sum.cpp
    solutions/002-medium-add-two-numbers.cpp
    solutions/003-medium-longest-substring-without-repeating-characters.cpp
    solutions/004-hard-median-of-two-sorted-arrays.cpp
    solutions/005-medium-longest-palindromic-substring.cpp
    solutions/006-easy-zigzag-conversion.cpp
    solutions/007-easy-reverse-integer.cpp
    "solutions/008-easy-string-to-integer-(atoi).cpp"
    solutions/009-easy-palindrome-number.cpp
    solutions/010-hard-regular-expression-matching.cpp
    solutions/011-medium-container-with-most-water.cpp
    solutions/012-medium-integer-to-roman.cpp
    solutions/013-easy-roman-to-integer.cpp
    solutions/014-easy-longest-common-prefix.cpp
    solutions/015-medium-3sum.cpp
    solutions/016-medium-3sum-closest.cpp
    solutions/017-medium-letter-combinations-of-a-phone-number.cpp
    solutions/018-medium-4sum.cpp
    solutions/019-easy-remove-nth-node-from-end-of-list.cpp
    solutions/020-easy-valid-parentheses.cpp
    solutions/021-easy-merge-two-sorted-lists.cpp
    solutions/022-medium-generate-parentheses.cpp
    solutions/023-hard-merge-k-sorted-lists.cpp
    solutions/024-medium-swap-nodes-in-pairs.cpp
    solutions/025-hard-reverse-nodes-in-k-group.cpp
    solutions/026-easy-remove-duplicates-from-sorted-array.cpp
    solutions/027-easy-remove-element.cpp
    "solutions/028-easy-implement-strstr().cpp"
    solutions/029-medium-divide-two-integers.cpp
    solutions/030-hard-substring-with-concatenation-of-all-words.cpp
    solutions/031-medium-next-permutation.cpp
    solutions/032-hard-longest-valid-parentheses.cpp
    solutions/033-hard-search-in-rotated-sorted-array.cpp
    solutions/034-medium-search-for-a-range.cpp
    solutions/035-medium-search-insert-position.cpp
    solutions/036-easy-valid-sudoku.cpp
    solutions/037-hard-sudoku-solver.cpp
    solutions/038-easy-count-and-say.cpp
    solutions/039-medium-combination-sum.cpp
    solutions/040-medium-combination-sum-ii.cpp
    solutions/041-hard-first-missing-positive.cpp
    solutions/042-hard-trapping-rain-water.cpp
    solutions/043-medium-multiply-strings.cpp
    solutions/044-hard-wildcard-matching.cpp
    solutions/045-hard-jump-game-ii.cpp
    solutions/046-medium-permutations.cpp
    solutions/047-medium-permutations-ii.cpp
    solutions/048-medium-rotate-image.cpp
    solutions/049-medium-group-anagrams.cpp
    "solutions/050-medium-pow(x,-n).cpp"
    solutions/051-hard-n-queens.cpp
    solutions/052-hard-n-queens-ii.cpp
    solutions/053-medium-maximum-subarray.cpp
    solutions/054-medium-spiral-matrix.cpp
    solutions/055-medium-jump-game.cpp
    solutions/056-hard-merge-intervals.cpp
    solutions/057-hard-insert-interval.cpp
    solutions/058-easy-length-of-last-word.cpp
    solutions/059-medium-spiral-matrix-ii.cpp
    solutions/060-medium-permutation-sequence.cpp
    solutions/061-medium-rotate-list.cpp
    solutions/062-medium-unique-paths.cpp
    solutions/063-medium-unique-paths-ii.cpp
    solutions/064-medium-minimum-path-sum.cpp
    solutions/065-hard-valid-number.cpp
    solutions/066-easy-plus-one.cpp
    solutions/067-easy-add-binary.cpp
    solutions/068-hard-text-justification.cpp
    "solutions/069-medium-sqrt(x).cpp"
    solutions/070-easy-climbing-stairs.cpp
    solutions/071-medium-simplify-path.cpp
    solutions/072-hard-edit-distance.cpp
    solutions/073-medium-set-matrix-zeroes.cpp
    solutions/074-medium-search-a-2d-matrix.cpp
    solutions/075-medium-sort-colors.cpp
    solutions/076-hard-minimum-window-substring.cpp
    solutions/077-medium-combinations.cpp
    solutions/078-medium-subsets.cpp
    solutions/079-medium-word-search.cpp
    solutions/080-medium-remove-duplicates-from-sorted-array-ii.cpp
    solutions/081-medium-search-in-rotated-sorted-array-ii.cpp
    solutions/082-medium-remove-duplicates-from-sorted-list-ii.cpp
    solutions/083-easy-remove-duplicates-from-sorted-list.cpp
    solutions/084-hard-largest-rectangle-in-histogram.cpp
    solutions/085-hard-maximal-rectangle.cpp
    solutions/086-medium-partition-list.cpp
    solutions/087-hard-scramble-string.cpp
    solutions/088-easy-merge-sorted-array.cpp
    solutions/089-medium-gray-code.cpp
    solutions/090-medium-subsets-ii.cpp
    solutions/091-medium-decode-ways.cpp
    solutions/092-medium-reverse-linked-list-ii.cpp
    solutions/093-medium-restore-ip-addresses.cpp
    solutions/094-medium-binary-tree-inorder-traversal.cpp
    solutions/095-medium-unique-binary-search-trees-ii.cpp
    solutions/096-medium-unique-binary-search-trees.cpp
    solutions/097-hard-interleaving-string.cpp
    solutions/098-medium-validate-binary-search-tree.cpp
    solutions/099-hard-recover-binary-search-tree.cpp
    solutions/100-easy-same-tree.cpp
    solutions/101-easy-symmetric-tree.cpp
    solutions/102-easy-binary-tree-level-order-traversal.cpp
    solutions/103-medium-binary-tree-zigzag-level-order-traversal.cpp
    solutions/104-easy-maximum-depth-of-binary-tree.cpp
    solutions/105-medium-construct-binary-tree-from-preorder-and-inorder-traversal.cpp
    solutions/106-medium-construct-binary-tree-from-inorder-and-postorder-traversal.cpp
    solutions/107-easy-binary-tree-level-order-traversal-ii.cpp
    solutions/108-medium-convert-sorted-array-to-binary-search-tree.cpp
    solutions/109-medium-convert-sorted-list-to-binary-search-tree.cpp
    solutions/110-easy-balanced-binary-tree.cpp
    solutions/111-easy-minimum-depth-of-binary-tree.cpp
    solutions/112-easy-path-sum.cpp
    solutions/113-medium-path-sum-ii.cpp
    solutions/114-medium-flatten-binary-tree-to-linked-list.cpp
    solutions/115-hard-distinct-subsequences.cpp
    solutions/116-medium-populating-next-right-pointers-in-each-node.cpp
    solutions/117-hard-populating-next-right-pointers-in-each-node-ii.cpp
    solutions/118-easy-pascal's-triangle.cpp
    solutions/119-easy-pascal's-triangle-ii.cpp
    solutions/120-medium-triangle.cpp
    solutions/121-medium-best-time-to-buy-and-sell-stock.cpp
    solutions/122-medium-best-time-to-buy-and-sell-stock-ii.cpp
    solutions/123-hard-best-time-to-buy-and-sell-stock-iii.cpp
    solutions/124-hard-binary-tree-maximum-path-sum.cpp
    solutions/125-easy-valid-palindrome.cpp
    solutions/126-hard-word-ladder-ii.cpp
    solutions/127-medium-word-ladder.cpp
    solutions/169-easy-majority-element.cpp
    solutions/171-easy-excel-sheet-column-number.cpp
    solutions/191-easy-number-of-1-bits.cpp
    solutions/217-easy-contains-duplicate.cpp
    solutions/226-easy-invert-binary-tree.cpp
    solutions/235-easy-lowest-common-ancestor-of-a-binary-search-tree.cpp
    solutions/236-easy-lowest-common-ancestor-of-a-binary-tree.cpp
    solutions/237-easy-delete-node-in-a-linked-list.cpp
    solutions/242-easy-valid-anagram.cpp
    solutions/258-easy-add-digits.cpp
    solutions/283-easy-move-zeroes.cpp
    unsolved/128-hard-longest-consecutive-sequence.cpp
    unsolved/129-medium-sum-root-to-leaf-numbers.cpp
    unsolved/130-medium-surrounded-regions.cpp
    unsolved/131-medium-palindrome-partitioning.cpp
    unsolved/132-hard-palindrome-partitioning-ii.cpp
    unsolved/133-medium-clone-graph.cpp
    unsolved/134-medium-gas-station.cpp
    unsolved/135-hard-candy.cpp
    unsolved/136-medium-single-number.cpp
    unsolved/137-medium-single-number-ii.cpp
    unsolved/138-hard-copy-list-with-random-pointer.cpp
    unsolved/139-medium-word-break.cpp
    unsolved/140-hard-word-break-ii.cpp
    unsolved/141-medium-linked-list-cycle.cpp
    unsolved/142-medium-linked-list-cycle-ii.cpp
    unsolved/143-medium-reorder-list.cpp
    unsolved/144-medium-binary-tree-preorder-traversal.cpp
    unsolved/145-hard-binary-tree-postorder-traversal.cpp
    unsolved/146-hard-lru-cache.cpp
    unsolved/147-medium-insertion-sort-list.cpp
    unsolved/148-medium-sort-list.cpp
    unsolved/149-hard-max-points-on-a-line.cpp
    unsolved/150-medium-evaluate-reverse-polish-notation.cpp
    unsolved/151-medium-reverse-words-in-a-string.cpp
    unsolved/152-medium-maximum-product-subarray.cpp
    unsolved/153-medium-find-minimum-in-rotated-sorted-array.cpp
    unsolved/154-hard-find-minimum-in-rotated-sorted-array-ii.cpp
    unsolved/155-easy-min-stack.cpp
    unsolved/160-easy-intersection-of-two-linked-lists.cpp
    unsolved/162-medium-find-peak-element.cpp
    unsolved/164-hard-maximum-gap.cpp
    unsolved/165-easy-compare-version-numbers.cpp
    unsolved/166-medium-fraction-to-recurring-decimal.cpp
    unsolved/168-easy-excel-sheet-column-title.cpp
    unsolved/172-easy-factorial-trailing-zeroes.cpp
    unsolved/173-medium-binary-search-tree-iterator.cpp
    unsolved/174-hard-dungeon-game.cpp
    unsolved/179-medium-largest-number.cpp
    unsolved/187-medium-repeated-dna-sequences.cpp
    unsolved/188-hard-best-time-to-buy-and-sell-stock-iv.cpp
    unsolved/189-easy-rotate-array.cpp
    unsolved/190-easy-reverse-bits.cpp
    unsolved/198-easy-house-robber.cpp
    unsolved/199-medium-binary-tree-right-side-view.cpp
    unsolved/200-medium-number-of-islands.cpp
    unsolved/201-medium-bitwise-and-of-numbers-range.cpp
    unsolved/202-easy-happy-number.cpp
    unsolved/203-easy-remove-linked-list-elements.cpp
    unsolved/204-easy-count-primes.cpp
    unsolved/205-easy-isomorphic-strings.cpp
    unsolved/206-easy-reverse-linked-list.cpp
    unsolved/207-medium-course-schedule.cpp
    "unsolved/208-medium-implement-trie-(prefix-tree).cpp"
    unsolved/209-medium-minimum-size-subarray-sum.cpp
    unsolved/210-medium-course-schedule-ii.cpp
    unsolved/211-medium-add-and-search-word---data-structure-design.cpp
    unsolved/212-hard-word-search-ii.cpp
    unsolved/213-medium-house-robber-ii.cpp
    unsolved/214-hard-shortest-palindrome.cpp
    unsolved/215-medium-kth-largest-element-in-an-array.cpp
    unsolved/216-medium-combination-sum-iii.cpp
    unsolved/218-hard-the-skyline-problem.cpp
    unsolved/219-easy-contains-duplicate-ii.cpp
    unsolved/220-medium-contains-duplicate-iii.cpp
    unsolved/221-medium-maximal-square.cpp
    unsolved/222-medium-count-complete-tree-nodes.cpp
    unsolved/223-easy-rectangle-area.cpp
    unsolved/224-medium-basic-calculator.cpp
    unsolved/225-easy-implement-stack-using-queues.cpp
    unsolved/227-medium-basic-calculator-ii.cpp
    unsolved/228-easy-summary-ranges.cpp
    unsolved/229-medium-majority-element-ii.cpp
    unsolved/230-medium-kth-smallest-element-in-a-bst.cpp
    unsolved/231-easy-power-of-two.cpp
    unsolved/232-easy-implement-queue-using-stacks.cpp
    unsolved/233-medium-number-of-digit-one.cpp
    unsolved/234-easy-palindrome-linked-list.cpp
    unsolved/238-medium-product-of-array-except-self.cpp
    unsolved/239-hard-sliding-window-maximum.cpp
    unsolved/240-medium-search-a-2d-matrix-ii.cpp
    unsolved/241-medium-different-ways-to-add-parentheses.cpp
    unsolved/257-easy-binary-tree-paths.cpp
    unsolved/260-medium-single-number-iii.cpp
    unsolved/263-easy-ugly-number.cpp
    unsolved/264-medium-ugly-number-ii.cpp
    unsolved/268-medium-missing-number.cpp
    unsolved/273-medium-integer-to-english-words.cpp
    unsolved/274-medium-h-index.cpp
    unsolved/275-medium-h-index-ii.cpp
    unsolved/278-easy-first-bad-version.cpp
    unsolved/279-medium-perfect-squares.cpp
    unsolved/282-hard-expression-add-operators.cpp
    unsolved/284-medium-peeking-iterator.cpp
    debug-helper.h
    testcases.cpp
    testcases.h)

add_executable(LeetCode ${SOURCE_FILES})